objects/eTranPicklistTranslationMetadata__mdt.object
<CustomObject>
    <description>CLOS Phase 2  - This is used to store the picklist transformation values for Etran</description>
    <fields>
        <fullName>EtranValue__c</fullName>
        <label>EtranValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>CLOS Phase 2 - This stores the field name for which the transformation in used</description>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBoMValue__c</fullName>
        <label>TBoMValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eTran Picklist Translations</label>
    <pluralLabel>eTran Picklist Translations</pluralLabel>
</CustomObject>